# livestreamshop_rust

./: README.md  ansible.md  coturn.md  mysignaturee.txt
server/: .env  Cargo.toml
server/src/: main.rs
server/src/handlers/: admin.rs  cart.rs  mod.rs  orders.rs  products.rs  users.rs
sql/: livestream_shop.sql
webapp/: admin.html  index.html  index.js  livepage.html  setupadmin.html  viewer.html  webrtc.js
